--- a/app/views/oral_questions/_oral_questions_list.html.erb
+++ b/app/views/oral_questions/_oral_questions_list.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="oral-question-list">
 	<% @hierarchy[:questions].each do |oral_question| %>
 		<li>
 			<%= link_to oral_question_path(oral_question[:id]) do %>
