--- a/app/views/written_questions/_written_questions_list.html.erb
+++ b/app/views/written_questions/_written_questions_list.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="written-question-list">
 	<% @hierarchy[:questions].each do |question| %>
 		<li>
 			<%= link_to written_question_path(question[:id]) do %>
