--- a/app/views/votes/index_by_person.html.erb
+++ b/app/views/votes/index_by_person.html.erb
@@ -1,16 +1,19 @@
 <h1><%= @person[:name] %> Voting Record</h1>
-
-<ul>
-	<% @person[:divisions].each do |division|%>
-		<li>
-			<dl>
-				<dt>
-					<%= link_to division_path(division[:id]) do %>
-						<%= division[:title] %> 
-					<% end %>
-				</dt>
-				<dd><%= division[:vote_value] == 'true' ? 'Content' : 'Not content' %></dd>
-			</dl>
-		</li>
-	<% end %>
-</ul>
+<% if(@person[:divisions].empty?) %>
+    <p>This person has not voted on any division.</p>
+<% else %>
+  <ul>
+    <% @person[:divisions].each do |division|%>
+      <li>
+        <dl>
+          <dt>
+            <%= link_to division_path(division[:id]) do %>
+              <%= division[:title] %>
+            <% end %>
+          </dt>
+          <dd><%= division[:vote_value] == 'true' ? 'Content' : 'Not content' %></dd>
+        </dl>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
