--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
 	<%= link_to root_path do %>
 		Home
 	<% end %>
-	
+
+	<%= Socket.ip_address_list.detect(&:ipv4_private?).try(:ip_address) %>
+
 	<fieldset style="position: absolute; right: 0; border: 5px solid; padding: 3px; background-color: white">
 		<legend>Download</legend>
 		<ul>
