managed to get the json-ld output in a script in the head tag - still need to polish json-ld output

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,12 @@
 	  ga('send', 'pageview');
 
 	</script>
+  <script type="application/ld+json">
+    <%= @json_ld.to_json %>
+  </script>
 
-	<%= link_to root_path do %>
+
+  <%= link_to root_path do %>
 		Home
 	<% end %>
 
