added temporary views for constituencies

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -40,7 +40,12 @@
 		<%= link_to petitions_path do %>
 			Petitions
 		<% end %>
-	</li>	
+	</li>
+  <li>
+  <%= link_to constituencies_path do %>
+      Constituencies
+  <% end %>
+</li>
 </ul>
 
 </br>
