Added context to specific search forms for automation testing

--- a/app/views/oral_questions/index.html.erb
+++ b/app/views/oral_questions/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Oral questions</h1>
 
-<form action="<%= url_for(search_index_path) %>">
+<form action="<%= url_for(search_index_path) %>" data-automation-context="Oral question search">
 	<fieldset>
 		<legend>Oral question search</legend>
 		<input type="hidden" name="filters[parl:OralParliamentaryQuestion]" value="on">
