--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Most active people based on the number of total contributions</h1>
 
-<form action="<%= url_for(search_index_path) %>">
+<form action="<%= url_for(search_index_path) %>" data-automation-context="Person search">
 	<fieldset>
 		<legend>Person search</legend>
 		<input type="hidden" name="filters[schema:Person]" value="on">
