--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Committees</h1>
 
-<form action="<%= url_for(search_index_path) %>">
+<form action="<%= url_for(search_index_path) %>" data-automation-context="Committee search">
 	<fieldset>
 		<legend>Committee search</legend>
 		<input type="hidden" name="filters[parl:Committee]" value="on">
