--- a/app/views/concepts/index.html.erb
+++ b/app/views/concepts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Concepts</h1>
 
-<form action="<%= url_for(search_index_path) %>">
+<form action="<%= url_for(search_index_path) %>" data-automation-context="Concept search">
 	<fieldset>
 		<legend>Concept search</legend>
 		<input type="hidden" name="filters[skos:Concept]" value="on">
