--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Divisions</h1>
 
-<form action="<%= url_for(search_index_path) %>">
+<form action="<%= url_for(search_index_path) %>" data-automation-context="Division search">
 	<fieldset>
 		<legend>Division search</legend>
 		<input type="hidden" name="filters[parl:Division]" value="on">
