--- a/app/views/written_questions/index.html.erb
+++ b/app/views/written_questions/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Written questions</h1>
 
-<form action="<%= url_for(search_index_path) %>">
+<form action="<%= url_for(search_index_path) %>" data-automation-context="Written question search">
 	<fieldset>
 		<legend>Written question search</legend>
 		<input type="hidden" name="filters[parl:WrittenParliamentaryQuestion]" value="on">
