Added order papers to front page

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -41,11 +41,16 @@
 			Petitions
 		<% end %>
 	</li>
-  <li>
-  <%= link_to constituencies_path do %>
-      Constituencies
-  <% end %>
-</li>
+  	<li>
+  		<%= link_to constituencies_path do %>
+  		    Constituencies
+  		<% end %>
+	</li>
+	<li>
+  		<%= link_to order_papers_path do %>
+  		    Order Papers
+  		<% end %>
+	</li>
 </ul>
 
 </br>
