added dropdown to add concept to item, still need to work on deleting concept from item

--- a/app/views/business_items/index_by_order_paper.html.erb
+++ b/app/views/business_items/index_by_order_paper.html.erb
@@ -1,7 +1,7 @@
 <h1>Business items for Order Paper <%= @order_paper[:date].strftime("%d %B %Y") %></h1>
 <ul>
 	<% @order_paper[:order_paper_items].each do |item| %>
-		<li><%= link_to order_paper_business_item_path(@order_paper[:date], item[:id]) do %>
+		<li><%= link_to order_paper_business_item_path(@order_paper[:date].strftime("%F"), item[:id]) do %>
 				<%= item[:title] %>
 			<% end %>
 		</li>
