--- a/app/views/business_items/edit.html.erb
+++ b/app/views/business_items/edit.html.erb
@@ -1,13 +1,13 @@
-<h1><%= @business_item_title %></h1>
+<h1><%= @business_item[:title] %></h1>
 
 <%= form_tag(method: :post) do %>
-	<%= label_tag(:concept, "concept") %>
+	<%= label_tag(:concept, "Concept") %>
 	<%= select_tag(:concept, options_for_select(@concepts)) %>
 	
 	<%= submit_tag("add") %>
 
 	<ul>
-		<% @linked_concepts.each do |concept| %>
+		<% @business_item[:concepts].each do |concept| %>
 			<li>
 				<span><%= concept[:label] %></span>
 				<button name="remove" value="<%= concept[:id]%>">remove</button>
@@ -15,6 +15,10 @@
 		<% end %>
 	</ul>
 
+<% end %>
+
+<%= link_to order_paper_business_item_path(@business_item[:date].strftime("%F"), @business_item[:id]) do %>
+	Back to business item
 <% end %>
 
 
