Linked people to order paper items

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -39,4 +39,9 @@
         Committees (<%= @person[:membership_count] %>)
     <% end %>
   </li>
+   <li>
+    <%= link_to person_business_items_path(@person[:id]) do %>
+        Order Paper Items (<%= @person[:order_paper_item_count] %>)
+    <% end %>
+  </li>
 </ul>
