--- a/app/views/business_items/show.html.erb
+++ b/app/views/business_items/show.html.erb
@@ -1,6 +1,4 @@
-<h1>Order Paper <%= @business_item[:date].strftime("%d %B %Y") %> Business Item</h1>
-
-<h3><%= link_to "#{@business_item[:date].strftime("%d %B %Y")} order papers", order_paper_business_items_path(@business_item[:date].strftime("%F")) %></h3>
+<h1>Order Paper Business Item Detail</h1>
 
 <h3><%= link_to "Edit", order_paper_business_item_edit_path(@business_item[:date].strftime("%F"), @business_item[:id]) %></h3>
 
@@ -8,6 +6,10 @@
 	<dt>Title</dt>
 	<dd>
 		<%= @business_item[:title] %>
+	</dd>
+	<dt>Order Paper</dt>
+	<dd>
+		<%= link_to "#{@business_item[:date].strftime("%d %B %Y")}", order_paper_business_items_path(@business_item[:date].strftime("%F")) %>
 	</dd>
 	<% if @business_item[:abstract] != "" %> 
 		<dt>Abstract</dt>
