now showing information about order paper item in the edit page

--- a/app/views/order_paper_items/edit.html.erb
+++ b/app/views/order_paper_items/edit.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @order_paper_item[:title] %></h1>
+<%= render "order_paper_item_info" %>
 
 <%= form_tag(method: :post) do %>
 	<%= label_tag(:concept, "Concept") %>
