refactored list into partial, refactored out method to map order paper items

--- a/app/views/order_paper_items/_order_paper_items_list.html.erb
+++ b/app/views/order_paper_items/_order_paper_items_list.html.erb
@@ -1,9 +1,16 @@
-<ul>
-	<% @concept[:order_paper_items].each do |item| %>
-		<li>
-			<%= link_to order_paper_item_path(item[:id]) do %>
-				<%= item[:title] %>
-			<% end %>
-		</li>
-	<% end %>
-</ul>
+<% if(@order_paper_items.empty?) %>
+    <p>No order paper items</p>
+<% else %>
+	<ul>
+		<% @order_paper_items.each do |item| %>
+			<li>
+				<%= link_to order_paper_item_path(item[:id]) do %>
+					<%= item[:title] %>
+				<% end %>
+				<% if item[:index_label] == "indexed" %>
+					- Indexed
+				<% end %>
+			</li>
+		<% end %>
+	</ul>
+<% end %>
