finished adding index for all the order paper items

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -51,6 +51,11 @@
   		    Order Papers
   		<% end %>
 	</li>
+	<li>
+  		<%= link_to order_paper_items_path do %>
+  		    Order Paper Items
+  		<% end %>
+	</li>
 </ul>
 
 </br>
