added "junk" property to business items

--- a/app/views/order_paper_items/_order_paper_item_info.html.erb
+++ b/app/views/order_paper_items/_order_paper_item_info.html.erb
@@ -5,7 +5,11 @@
 	</dd>
 	<dt>Index status: </dt>
 	<dd>
-		<%= @order_paper_item[:index_label] == "indexed" ? "Indexed" : "Not indexed" %>	
+		<%= @order_paper_item[:index_label] == "indexed" ? "Indexed" : "Indexing required" %>	
+	</dd>
+	<dt>Junk status: </dt>
+	<dd>
+		<%= @order_paper_item[:junk_label] == "junk" ? "Marked as junk" : "Not marked as junk" %>
 	</dd>
 	<dt>Order Paper</dt>
 	<dd>
