--- a/app/views/order_paper_items/_order_paper_items_list.html.erb
+++ b/app/views/order_paper_items/_order_paper_items_list.html.erb
@@ -9,6 +9,11 @@
 				<% end %>
 				<% if item[:index_label] == "indexed" %>
 					- Indexed
+				<% else %>
+					- Requires indexing
+				<% end %>
+				<% if item[:junk_label] == "junk" %>
+					- Marked as "junk"
 				<% end %>
 			</li>
 		<% end %>
