--- a/app/views/order_paper_items/edit.html.erb
+++ b/app/views/order_paper_items/edit.html.erb
@@ -5,6 +5,10 @@
 		<%= check_box_tag "index_checked", "checked", @indexed_status %>
 		Indexed
 	</label>
+	<label>
+		<%= check_box_tag "junk_checked", "junk", @junk_status %>
+		Mark as Junk
+	</label>
 	<button name="update_index">update</button>
 	<br>
 
