finished feature + refactored update so that empty fields are NOT added into triple store 🙌🏼

--- a/app/views/order_paper_items/_order_paper_item_details.html.erb
+++ b/app/views/order_paper_items/_order_paper_item_details.html.erb
@@ -37,5 +37,11 @@
 					<%= @order_paper_item[:person][:name] %>
 				<% end %>
 			</dd>
+			<% unless @order_paper_item[:person][:role].nil? || @order_paper_item[:person][:role] == "" %>
+				<dt>Member role:</dt>
+				<dd>
+					<%= @order_paper_item[:person][:role] %>
+				</dd>
+			<% end %>
 	<% end %>
 </dl>
