refactoring + member role field is now visible whenever the order paper item has a member

--- a/app/views/order_paper_items/_order_paper_item_details.html.erb
+++ b/app/views/order_paper_items/_order_paper_item_details.html.erb
@@ -37,11 +37,9 @@
 					<%= @order_paper_item[:person][:name] %>
 				<% end %>
 			</dd>
-			<% unless @order_paper_item[:person][:role].nil? || @order_paper_item[:person][:role] == "" %>
-				<dt>Member role:</dt>
-				<dd>
-					<%= @order_paper_item[:person][:role] %>
-				</dd>
-			<% end %>
+			<dt>Member role:</dt>
+			<dd>
+				<%= @order_paper_item[:person][:role] == "" ? "Not specified" : @order_paper_item[:person][:role] %>
+			</dd>
 	<% end %>
 </dl>
