Added committees and petitions to concepts search results

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -31,6 +31,8 @@
           <li> <%= link_to "Oral questions", concept_oral_questions_path(result[:id]) %> </li>
           <li> <%= link_to "Divisions", concept_divisions_path(result[:id]) %> </li>
           <li> <%= link_to "Order Paper Items", concept_order_paper_items_path(result[:id]) %> </li>
+          <li> <%= link_to "Committees", concept_committees_path(result[:id]) %> </li>
+          <li> <%= link_to "Petitions", concept_petitions_path(result[:id]) %> </li>
 			  <% end %>
       </ul>
 		</li>
