--- a/app/views/committees/index_by_concept.html.erb
+++ b/app/views/committees/index_by_concept.html.erb
@@ -1,4 +1,4 @@
-<h1>Divisions about <%= @concept[:label] %></h1>
+<h1>Committees about <%= @concept[:label] %></h1>
 
 <% if @committees.empty? %>
 	<p>There are no committees related to <%= @concept[:label] %></p>
